crates/test-ui/ui/extern_class_root.stderr
error[E0277]: the trait bound `MyObject: ClassType` is not satisfied
 --> ui/extern_class_root.rs
  |
  | / extern_class!(
  | |     #[unsafe(super(MyObject))]
  | |     #[thread_kind = AllocAnyThread]
  | |     pub struct MyRootClass;
  | | );
  | |_^ the trait `ClassType` is not implemented for `MyObject`
  |
  = help: the following other types implement trait `ClassType`:
            MyRootClass
            NSObject
            __NSProxy
note: required by a bound in `ValidThreadKind::check`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/class.rs
  |
  |     Self::Super: ClassType,
  |                  ^^^^^^^^^ required by this bound in `ValidThreadKind::check`
...
  |     fn check() {}
  |        ----- required by a bound in this associated function
  = note: this error originates in the macro `$crate::__extern_class_inner` which comes from the expansion of the macro `extern_class` (in Nightly builds, run with -Z macro-backtrace for more info)
